--- a/form-validation/style.css
+++ b/form-validation/style.css
@@ -37,4 +37,10 @@ small {
   #textArea {
     width: 225px;
   }
+   html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
 }
